--- a/site/portalDriver/varible/_varible.scss
+++ b/site/portalDriver/varible/_varible.scss
@@ -52,7 +52,7 @@ $Colors: (
 $typographyVariables: (
 "Button-color": map-get($Colors, "white-text-field-Bg"),
 "Button-font-family": 'Heebo',
-"Button-font-size": rem(16px),
+"Button-font-size": 16px,
 "Button-font-style": normal,
 "Button-font-weight": 400,
 "Button-letter-spacing": 0em,
