--- a/site/portalDriver/bin/style.css
+++ b/site/portalDriver/bin/style.css
@@ -17,7 +17,7 @@
   font-family: "Heebo";
   font-style: normal;
   font-weight: 400;
-  font-size: rem(16px);
+  font-size: 16px;
   line-height: 1.2999999523em;
   color: #ffffff;
   width: 100% !important;
