--- a/studio/style.scss
+++ b/studio/style.scss
@@ -17,59 +17,103 @@
 @import './components/popup';
 @import './components/toggleswitch';
 
-
-
-.bg-warning{
-    background: #29b0d975 !important;
-}
-
-.ux-studio-bottom-border{
-    border-bottom: 2px solid #074b5f !important;
-}
-.ux-studio-top-border{
-    border-top: 2px solid #074b5f !important;
-}
 .border{
     border: none !important;
 }
 
-header{
-    border: none !important;
-}
 #TafnitCore_System_UI_App_Tools_Studio_UXStudio{
-    width: 98%;
-
-
-.xstyle-itreeview-wrapper{
-    direction: ltr !important;
-    max-height: 450px;
-
-
-    &::-webkit-scrollbar-track {
-        border-radius: 10px;
+    width: 100%;
+    height: clamp(500px, 90dvh, 100dvh);
+    display: flex;
+    flex-direction: column;
+    
+    &, header, div[uxid=xstudioMainRow]{
+        border-radius: 0;
+        padding: 0 !important;
+        margin: 0 !important;
+        padding: 0 !important;
     }
 
+    div[uxid=xstudioMainRow]{
+        height: 100%;
+        background-color: white;
+    }
+
+    mainbody{
+        max-height: 90rem;
+        flex: 1 1 auto;
+    }
+
+    div[uxid=xstudioMainpanelCol]{
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    div[uxid=xstudioMainpanel]{
+        width: 100%;
+        height: fit-content;
+        background-color: rgba(0, 0, 0, 0.05);
+        padding:10px;
+        flex: 1 1 auto;
+        
+        & > div{
+            height: 100% !important;
+        }
+        div{
+            background-color: white;
+        }
+    }
+
+    .x-row{
+        border-radius: 0;
+    }
+    
+    
+    .xstyle-itreeview-wrapper{
+        direction: ltr !important;
+        max-height: 450px;
+        
+        
+        &::-webkit-scrollbar-track {
+            border-radius: 10px;
+    }
+    
     &::-webkit-scrollbar {
         width: 10px;
         background:#ffff;
     }
-
+    
     &::-webkit-scrollbar-thumb {
         background:#29AFD9;
         border-radius:10px;
     }
-
-
+    
+    
     &::-webkit-scrollbar-thumb:hover {
         background: darken(#29AFD9, 5);
     }
+
+    .bg-warning{
+        background: #29b0d975 !important;
+    }
+    
+    .ux-studio-bottom-border{
+        border-bottom: 2px solid #074b5f !important;
+    }
+
+    .ux-studio-top-border{
+        border-top: 2px solid #074b5f !important;
+    }
 }
 
-   
 
 
 
 
-   
+
+
 
 }
